traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:18: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalByColumn:21: error: expected start of definition
	override def forward()  {
                 ^TraversalByColumn:24: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalByColumn:27: error: expected start of definition
	override def backward() {
                 ^TraversalByColumn:30: error: Unmatched closing brace '}' ignored here
}
^