traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var x:Int = 0
  
    while (getMondeLargeur()-1!=getX() && getMondeHauteur!= GetY()){
      
      
  ecritMessage(x)
 x+=1
    setPos(x/getMondeHauteur(),x%getMondeLargeur())
    }
     
      
  }
  x+=1
  ecritMessage(x)
}